--- a/ToGol/app/build.gradle
+++ b/ToGol/app/build.gradle
@@ -19,9 +19,12 @@ android {
     }
 }
 
+final ANDROID_SUPPORT_VERSION = '23.1.1'
+final VERSION_PLAY_SERVICE = '8.4.0'
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.google.android.gms:play-services:8.4.0'
+    compile "com.android.support:appcompat-v7:${ANDROID_SUPPORT_VERSION}"
+    compile "com.android.support:design:${ANDROID_SUPPORT_VERSION}"
+    compile "com.google.android.gms:play-services-maps:${VERSION_PLAY_SERVICE}"
 }
