--- a/ToGol/.gitignore
+++ b/ToGol/.gitignore
@@ -1,8 +1,12 @@
 *.iml
 .gradle
 /local.properties
-/.idea/workspace.xml
-/.idea/libraries
+/.idea/
 .DS_Store
+.classpath
+.settings
+.project
 /build
 /captures
+target/
+./target/
