--- a/ToGol/app/build.gradle
+++ b/ToGol/app/build.gradle
@@ -21,10 +21,16 @@ android {
 
 final ANDROID_SUPPORT_VERSION = '23.1.1'
 final VERSION_PLAY_SERVICE = '8.4.0'
+final VERSION_JACKSON = '2.7.3'
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile "com.android.support:appcompat-v7:${ANDROID_SUPPORT_VERSION}"
     compile "com.android.support:design:${ANDROID_SUPPORT_VERSION}"
     compile "com.google.android.gms:play-services-maps:${VERSION_PLAY_SERVICE}"
+
+    compile "com.fasterxml.jackson.core:jackson-core:${VERSION_JACKSON}"
+    compile "com.fasterxml.jackson.core:jackson-annotations:${VERSION_JACKSON}"
+    compile "com.fasterxml.jackson.core:jackson-databind:${VERSION_JACKSON}"
+    compile 'com.google.android.gms:play-services-appindexing:8.4.0'
 }
