--- a/ToGol/app/build.gradle
+++ b/ToGol/app/build.gradle
@@ -17,6 +17,8 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    useLibrary  'org.apache.http.legacy'
 }
 
 final ANDROID_SUPPORT_VERSION = '23.1.1'
@@ -33,4 +35,7 @@ dependencies {
     compile "com.fasterxml.jackson.core:jackson-annotations:${VERSION_JACKSON}"
     compile "com.fasterxml.jackson.core:jackson-databind:${VERSION_JACKSON}"
     compile 'com.google.android.gms:play-services-appindexing:8.4.0'
+
+    compile 'org.apache.httpcomponents:httpcore:4.4.1'
+    compile 'org.apache.httpcomponents:httpclient:4.5'
 }
